Update junit configs